--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/tinlizzie.html"> Tin Lizzie</a>
+        <a href="./recipes/tinlizzie.html"> Tin Lizzie</a><br>
+        <a href="./recipes/nicepear.html">The Nice Pear</a><br>
+        <a href="./recipes/margarita.html">Margarita</a>
 
     </body>
 </html>
