--- a/recipes/tinlizzie.html
+++ b/recipes/tinlizzie.html
@@ -7,6 +7,19 @@
 </head>
 <body>
     <h1>Tin Lizzie</h1>
-    
+    <img src="/img/tinLizzie.webp" alt="purple cocktail" width="100" height="100">
+    <h4>Buffalo Trace bourbon, muddled blackberries, ginger puree, fresh lemon juice</h2>
+    <h2>Specs
+        <ul>
+            <li>4-6 blackberries</li>
+            <li>2oz Whiskey</li>
+            <li>.75 oz lemon juice</li>
+            <li>1oz ginger syrup</li>
+            <li>.5oz giner liqueur</li>
+        </ul>
+    </h2>
+    <h2>Muddle blackberries. Add remaining ingredients. Shake and double strain into rocks glass. Enjoy!</h2>
+
+
 </body>
 </html>
